--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100005193854879"
+    "100081757004788"
   ],
   "whiteListMode": {
     "enable": false,
@@ -44,8 +44,8 @@
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "𝐁𝐀𝐘𝐉𝐈𝐃-৬T৯ツ",
-  "prefix": "?",
+  "nickNameBot": "YOUR-BBYツ",
+  "prefix": "!",
   "BaYjidapi": "https://bayjid-hd.onrender.com",
   "api": "",
   "api2": "",
